# thecybercartel

./: .gitignore  README.md
thecybercartel/: pyproject.toml
thecybercartel/social/: database_manager.py  settings.py  urls.py  views.py  wsgi.py
thecybercartel/social/templates/: header.html  index.html  register.html
