[project]
name = "thecybercartel"
version = "0.1.0"
description = ""
authors = [
    {name = "hydr0nium",email = "37932436+hydr0nium@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
